<resources>
    <string name="app_name">SmartWarmUp</string>
    <string name="action_settings">Settings</string>
    <string name="choose_exercise">Выберите упражнение</string>
    <string name="move_to_next">Перейти к расчету разминки</string>
    <string name="squat">Приседания</string>
    <string name="bench">Жим лёжа</string>
    <string name="deadlift">Становая тяга</string>
    <string name="type_workweight">Введите  вес первого рабочего подхода</string>
    <string name="hint_weight">Введите вес</string>
    <string name="calc">Рассчитать</string>
    <string name="title_dialog">Справка</string>
    <string name="ok">Хорошо</string>
    <string name="turn_off_music">Выключить звук</string>
    <string name="choose_measure_type">Единицы измерения</string>
    <string name="weight">Вес</string>
    <string name="app_options">Общие</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="default_measure">кг</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="work_set">1-ый рабочий подход</string>
    <string name="click_image">Нажмите на картинку, чтобы перейти на канал Дмитрия Смирнова:</string>
    <string name="info">Схема предложенная в качестве разминки была разработана фитнес-редактором журнала Men\'s Health, тренером и выступающим спортсменом Дмитрием Смирновым</string>
</resources>
